# fastapi-template

./: .dockerignore  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.example.ini  alembic.ini  cookiecutter.json  docker-compose.yaml  docker-compose.yml  local_extensions.py  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: pre-commit.yaml  pre-commit.yml
alembic/: env.py
alembic/versions/: _2023_12_06_21_31_add_user.py  _2024_09_21_23_01_add_user_table.py  fa8c771eb65b_init.py
deploy/: Dockerfile
hooks/: post_gen_project.py
scripts/: alembic_auto_migrations.py
src/: __main__.py  config.py  config_schema.py  constants.py  exceptions.py  logging_.py  pydantic_base.py  utils.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  exceptions.py  lifespan.py  logging_.py  routers.py  shared.py  startup.py
src/app/: __init__.py  dependencies.py
src/app/auth/: __init__.py  common.py  dependencies.py  dev.py
src/app/users/: routes.py
src/modules/admin/: app.py  auth.py  views.py
src/modules/auth/: common.py  dependencies.py  repository.py  router.py  schemas.py
src/modules/dev/: router.py
src/modules/tokens/: repository.py
src/modules/user/: repository.py  router.py  schemas.py
src/modules/users/: repository.py  router.py  routes.py  schemas.py
src/repositories/some_module/: __init__.py  abc.py  repository.py
src/repositories/tokens/: __init__.py  abc.py  repository.py
src/repositories/users/: __init__.py  abc.py  repository.py
src/schemas/: __init__.py  some_scheme.py  some_scheme_in_plural.py  tokens.py  users.py
src/storages/mongo/: __base__.py  __init__.py  users.py
src/storages/sql/: storage.py  utils.py
src/storages/sql/models/: users.py
src/storages/sqlalchemy/: __init__.py  repository.py  storage.py
src/storages/sqlalchemy/models/: __init__.py  __mixin__.py  some_model.py  some_model_in_plural.py  users.py
src/swagger/: swagger-ui-bundle.js
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  Dockerfile  README.md.jinja  docker-compose.yaml.jinja  logging.yaml  pyproject.toml.jinja  settings.example.yaml.jinja
{{ cookiecutter.project_slug }}/.github/: dependabot.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: deploy.yaml
{{ cookiecutter.project_slug }}/scripts/: manage.py
{{ cookiecutter.project_slug }}/scripts/templates/: crud  model  router  router_with_basic_routes
{{ cookiecutter.project_slug }}/src/: __init__.py  config_schema.py.jinja  logging_.py  prepare.py.jinja
{{ cookiecutter.project_slug }}/src/api/: __main__.py  app.py.jinja  dependencies.py.jinja  docs.py  exceptions.py  lifespan.py.jinja
{{ cookiecutter.project_slug }}/src/modules/: {{'inh_accounts_sdk.py'|stencil('innohassle_accounts')}}  {{'innohassle_accounts.py'|stencil('innohassle_accounts')}}
{{ cookiecutter.project_slug }}/{{'alembic'|stencil_path('alembic')}}/: env.py
{{ cookiecutter.project_slug }}/{{'alembic'|stencil_path('alembic')}}/versions/: _2024_09_21_23_01_add_user_table.py
(+18 files in other folders)
