[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "joserfc>=1.6.5",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "fastapi-swagger>=0.4.49",
    "fastapi-derive-responses>=0.1.7",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
    # mongo = [
    "beanie>=2.1.0,<3.0.0",
    # ]
    # passwords = [
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    #]
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "astor>=0.8.1",
    "pygments>=2.20.0",
    "simple-term-menu>=1.6.6",
    "prek>=0.3.13",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
